--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,5 +1,5 @@
 .container{
     width: 100%;
-    height: 500px;
-    border: 1px solid darkgoldenrod
+    /* height: 500px; */
+    /* border: 1px solid darkgoldenrod */
 }
